--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 nalgebra = { version = "0.33.2", features = ["rand"] }
 rand = "0.8.5"
 rand_distr = "0.4.3"
+
+[dev-dependencies]
+image = "0.25.5"
