--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-nalgebra = { version = "0.33.2", features = ["rand"] }
+nalgebra = { version = "0.33.2", features = ["rand", "rayon"] }
 rand = "0.8.5"
 rand_distr = "0.4.3"
+rayon = "1.10.0"
 
 [dev-dependencies]
 image = "0.25.5"
