--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 nalgebra = { version = "0.33.2", features = ["rand"] }
 rand = "0.8.5"
 rand_distr = "0.4.3"
+rayon = "1.10.0"
 
 [dev-dependencies]
 image = "0.25.5"
